começando com os testes unitarios